syntax = "proto3";

package proto;

service Drinks {
    rpc GetDrinks(DrinksRequest) returns (DrinksResponse) {}
    rpc GetDrinkById(DrinkRequest) returns (DrinkResponse) {}
}

message DrinkRequest {
    int32 id = 1;
}

message DrinksRequest {
    int32 page = 1;
    int32 fortress = 2;
    int32 complication = 3;
    int32 volume = 4;
    bool is_flacky = 5;
    bool is_fire = 6;
    bool is_iba = 7;
    repeated int32 includes = 8;
    repeated int32 except = 9;
}

message DrinkItem {
    int32 id = 1;
    bool is_flacky = 2;
    bool is_fire = 3;
    bool is_iba = 4;
    float mark = 5;
    string name = 6;
    string complication = 7;
    string fortress = 8;
    string ingredients = 9;
    string preview = 10;
}

message Instrument {
    int32 id = 1;
    string name = 2;
    string image = 3;
}

message Ingredient {
    int32 id = 1;
    string name = 2;
    string volume = 3;
}

message DayDrink {
    int32 id = 1;
    bool is_flacky = 2;
    bool is_fire = 3;
    bool is_iba = 4;
    float mark = 5;
    string name = 6;
    string complication = 8;
    string fortress = 9;
    string recipe = 10;
    string description = 11;
    string tried_by = 12;
    string preview = 13;
    repeated Ingredient ingredients = 14;
    repeated Instrument instruments = 15;
}

message DrinksResponse {
    repeated DrinkItem drinks = 1;
    DayDrink day_drink = 2;
}

message DrinkResponse {
    int32 id = 1;
    bool is_flacky = 2;
    bool is_fire = 3;
    bool is_iba = 4;
    float mark = 5;
    string name = 6;
    string name_en = 7;
    string complication = 8;
    string fortress = 9;
    string recipe = 10;
    string description = 11;
    string tried_by = 12;
    repeated string gallery = 13;
    repeated Ingredient ingredients = 14;
    repeated Instrument instruments = 15;
    repeated DrinkItem similar = 16;
}